RESOLVED FIXED238978
Fix accessibility/aria-invalid.html in isolated tree mode
https://bugs.webkit.org/show_bug.cgi?id=238978
Summary Fix accessibility/aria-invalid.html in isolated tree mode
Tyler Wilcock
Reported 2022-04-07 20:17:48 PDT
Fix accessibility/aria-invalid.html in isolated tree mode
Attachments
Patch (14.29 KB, patch)
2022-04-07 20:24 PDT, Tyler Wilcock
no flags
Patch (14.29 KB, patch)
2022-04-07 23:10 PDT, Tyler Wilcock
no flags
Patch (13.96 KB, patch)
2022-04-08 11:54 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-07 20:17:58 PDT
Tyler Wilcock
Comment 2 2022-04-07 20:24:26 PDT
Tyler Wilcock
Comment 3 2022-04-07 23:10:05 PDT
Andres Gonzalez
Comment 4 2022-04-08 05:16:26 PDT
(In reply to Tyler Wilcock from comment #3) > Created attachment 457024 [details] > Patch --- a/LayoutTests/resources/accessibility-helper.js +++ a/LayoutTests/resources/accessibility-helper.js + const evalExpression = `${expression} === ${expectedValue}`; + if (eval(evalExpression)) + return `PASS: ${evalExpression}\n`; + else + return `FAIL: ${expression} !== ${expectedValue}\n`; Can we write this more succinctly as + if (eval(`${expression} === ${expectedValue}`)) + return `PASS: ${evalExpression}\n`; + return `FAIL: ${expression} !== ${expectedValue}\n`;
Tyler Wilcock
Comment 5 2022-04-08 11:54:29 PDT
EWS
Comment 6 2022-04-10 00:30:20 PDT
Committed r292686 (249478@main): <https://commits.webkit.org/249478@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457106 [details].
Note You need to log in before you can comment on or make changes to this bug.