Fix accessibility/aria-invalid.html in isolated tree mode https://bugs.webkit.org/show_bug.cgi?id=238978

Reviewed by Chris Fleizach.

Source/WebCore:

With this patch, we update the isolated tree when the aria-invalid
attribute changes.

Fixes accessibility/aria-invalid.html in isolated tree mode.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):
Drive-by re-ordering of `case AXPropertyName::IdentifierAttribute` such that this
function handles properties in alphabetical order.

LayoutTests:

* accessibility/aria-invalid-expected.txt:
* accessibility/aria-invalid.html:
Rewrite to call `debug` only once at the end of the test. Also made
this test use accessibleElementById instead of
accessibilityController.focusedElement.
* resources/accessibility-helper.js:
Add new `expect` function, which is like the more ubiquitous
`shouldBe` from js-test.js, but returns the output as a string instead
of calling `debug` to output to a console DOM element.

Canonical link: https://commits.webkit.org/249478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292686 268f45cc-cd09-0410-ab3c-d52691b4dbfc